-
Bug
-
Resolution: Done
-
P2: Important
-
6.x
-
2c7ba307f7 (qt/qtdeclarative/dev) 2c7ba307f7 (qt/tqtc-qtdeclarative/dev)
qmllint warns that a required property is not assigned even if it is exported as an alias.
import QtQuick 2.15 Item { property alias req: inner.req // should be required instead Item { id: inner required property var req // aliased, shouldn't be required locally } }
% qmllint /tmp/a.qml Warning: /tmp/a.qml:5:5: Component is missing required property req from here Item { ^^^^