qmllint: Do not warn about required properties with root aliases

Previously we warned about required properties that had a root level
alias. This pattern might be used to expose a nested required property
to the component's User though, so this change makes sure we do not warn
about the property being unset anymore.

Fixes: QTBUG-99693
Change-Id: I3ac7bcfe49b67ffb1b04373bd2770f465bd228f8
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>