tests/auto/qml/qmllint/data/RequiredWithRootLevelAlias.qml
@@ -1,0 +1,9 @@
+import QtQuick
+
+Item {
+    property alias requiredAlias: nested.foo
+    Item {
+        id: nested
+        required property string foo
+    }
+}
